# ffmpeg_decode_audiofile

./: CMakeLists.txt  README.md
API/ffmpeg-5.0/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  postproc.lib  swresample.lib  swscale.lib
AudioHandler/BaseModule/inc/: Audio_Definition.h
AudioHandler/BaseModule/src/: Audio_Main.cpp
AudioHandler/Decoder/inc/: AudioDecoder.h
AudioHandler/Decoder/src/: AudioDecoder.cpp
AudioHandler/Resampler/inc/: AudioResampler.h
AudioHandler/Resampler/src/: AudioResampler.cpp
hdr/: AudioDecoder.h  BaseModule.h
src/: AudioDecoder.cpp  BaseModule.cpp  main.cpp
